Started implementing json

--- a/ExpTrc/ExpTrc.vcxproj.filters
+++ b/ExpTrc/ExpTrc.vcxproj.filters
@@ -46,9 +46,6 @@
     <ClCompile Include="src\button.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Database.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\checkbox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -56,6 +53,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\LoginWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\JSON.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -102,13 +102,13 @@
     </QtUic>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="header\Database.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="header\Declarations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="header\WindowDesign.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\JSON.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
