Splitted the MainEventFilter up into many, normal events and added more docs

--- a/ExpTrc/ExpTrc.vcxproj.filters
+++ b/ExpTrc/ExpTrc.vcxproj.filters
@@ -61,7 +61,7 @@
     <ClCompile Include="src\User.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Declarations.cpp">
+    <ClCompile Include="src\Config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -118,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="header\User.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\Config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
