--- a/ExpTrc/ExpTrc.vcxproj
+++ b/ExpTrc/ExpTrc.vcxproj
@@ -86,7 +86,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\Declarations.cpp" />
+    <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\JSON.cpp" />
     <ClCompile Include="src\LoginWindow.cpp" />
     <ClCompile Include="src\checkbox.cpp" />
@@ -118,6 +118,7 @@
     <QtMoc Include="header\spinbox.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="header\Config.h" />
     <ClInclude Include="header\User.h" />
     <QtMoc Include="header\LoginWindow.h" />
     <QtMoc Include="header\textbox.h" />
