--- a/ExpTrc/ExpTrc.vcxproj.filters
+++ b/ExpTrc/ExpTrc.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="src\Config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Expense.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="MainWindow.qrc">
@@ -121,6 +124,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="header\Config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\Expense.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
