--- a/ExpTrc/ExpTrc.vcxproj.filters
+++ b/ExpTrc/ExpTrc.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClCompile Include="src\Timer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Calculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="MainWindow.qrc">
@@ -133,6 +136,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="header\Timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="header\Calculator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
