--- a/ExpTrc/ExpTrc.vcxproj
+++ b/ExpTrc/ExpTrc.vcxproj
@@ -93,7 +93,7 @@
     <ClCompile Include="src\Calculator.cpp" />
     <ClCompile Include="src\Expense.cpp" />
     <ClCompile Include="src\Config.cpp" />
-    <ClCompile Include="src\JSON.cpp" />
+    <ClCompile Include="src\FileManager.cpp" />
     <ClCompile Include="src\LoginWindow.cpp" />
     <ClCompile Include="src\checkbox.cpp" />
     <ClCompile Include="src\button.cpp" />
@@ -104,7 +104,6 @@
     <ClCompile Include="src\plaintext.cpp" />
     <ClCompile Include="src\spinbox.cpp" />
     <ClCompile Include="src\textbox.cpp" />
-    <ClCompile Include="src\User.cpp" />
     <ClCompile Include="src\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -128,7 +127,7 @@
     <ClInclude Include="header\Calculator.h" />
     <ClInclude Include="header\Expense.h" />
     <ClInclude Include="header\Config.h" />
-    <ClInclude Include="header\User.h" />
+    <ClInclude Include="header\FileManager.h" />
     <ClInclude Include="header\Timer.h" />
     <ClInclude Include="vendor\NetLib\boost\mime.hpp" />
     <ClInclude Include="vendor\NetLib\boost\network.hpp" />
@@ -345,7 +344,6 @@
     <QtMoc Include="header\textbox.h" />
     <QtMoc Include="header\checkbox.h" />
     <ClInclude Include="header\Declarations.h" />
-    <ClInclude Include="header\JSON.h" />
     <ClInclude Include="header\WindowDesign.h" />
   </ItemGroup>
   <ItemGroup>
